fix(build): Declare missing dependency on org.operaton.bpm.webapp:operaton-webapp
distro/webjar build failed when the build is executed in parallel by mvnd.

--- a/distro/webjar/pom.xml
+++ b/distro/webjar/pom.xml
@@ -25,6 +25,13 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+  <dependencies>
+    <dependency>
+      <groupId>org.operaton.bpm.webapp</groupId>
+      <artifactId>operaton-webapp</artifactId>
+      <type>war</type>
+    </dependency>
+  </dependencies>
   <build>
     <plugins>
       <!-- first fetch and unpack the war -->
