chore(dependabot): Configure npm updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,7 +10,7 @@ updates:
   - package-ecosystem: "devcontainers"
     directory: "/"
     schedule:
-      interval: weekly
+      interval: "weekly"
     target-branch: "main"
   - package-ecosystem: "github-actions"
     directory: "/"
@@ -30,12 +30,26 @@ updates:
     ignore:
       - dependency-name: "*"
         update-types: ["version-update:semver-major"]
+  - package-ecosystem: "npm"
+    directory: "/webapps/frontend"
+    schedule:
+      interval: "weekly"
+    reviewers:
+      - "kthoms"
+    target-branch: "main"
+  - package-ecosystem: "npm"
+    directory: "/engine-rest/docs"
+    schedule:
+      interval: "weekly"
+    reviewers:
+      - "kthoms"
+    target-branch: "main"
 
   # Release 1.0.x branch - patch updates only
   - package-ecosystem: "devcontainers"
     directory: "/"
     schedule:
-      interval: weekly
+      interval: "weekly"
       time: "01:30"
     target-branch: "release/1.0.x"
     open-pull-requests-limit: 10
@@ -63,6 +77,26 @@ updates:
       - "kthoms"
     target-branch: "release/1.0.x"
     open-pull-requests-limit: 10
+    ignore:
+      - dependency-name: "*"
+        update-types: ["version-update:semver-major", "version-update:semver-minor"]
+  - package-ecosystem: "npm"
+    directory: "/webapps/frontend"
+    schedule:
+      interval: "weekly"
+    reviewers:
+      - "kthoms"
+    target-branch: "main"
+    ignore:
+      - dependency-name: "*"
+        update-types: ["version-update:semver-major", "version-update:semver-minor"]
+  - package-ecosystem: "npm"
+    directory: "/engine-rest/docs"
+    schedule:
+      interval: "weekly"
+    reviewers:
+      - "kthoms"
+    target-branch: "main"
     ignore:
       - dependency-name: "*"
         update-types: ["version-update:semver-major", "version-update:semver-minor"]
