chore(ci): Update ignore paths for build & integration-build workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ on:
       - '.github/jreleaser/changelog.tpl'
       - '.github/ISSUE_TEMPLATE/**'
       - '.github/PULL_REQUEST_TEMPLATE/**'
+      - '.github/dependabot.yml'
       - '**/*.md'
       - 'distro/**'
       - 'settings/**'
@@ -26,6 +27,9 @@ on:
       - '.github/workflows/**'
       - '!.github/workflows/build.yml'
       - '.github/jreleaser/changelog.tpl'
+      - '.github/ISSUE_TEMPLATE/**'
+      - '.github/PULL_REQUEST_TEMPLATE/**'
+      - '.github/dependabot.yml'
       - '**/*.md'
       - 'distro/**'
       - 'settings/**'
