--- a/engine-rest/docs/pom.xml
+++ b/engine-rest/docs/pom.xml
@@ -12,6 +12,7 @@
   <description>${project.name}</description>
   <properties>
     <skip-third-party-bom>true</skip-third-party-bom>
+    <npm.build.args>install</npm.build.args>
   </properties>
   <dependencies>
     <dependency>
@@ -60,13 +61,13 @@
             </goals>
           </execution>
           <execution>
-            <id>npm install</id>
+            <id>npm (clean) install</id>
             <goals>
               <goal>npm</goal>
             </goals>
             <phase>generate-resources</phase>
             <configuration>
-              <arguments>ci</arguments>
+              <arguments>${npm.build.args}</arguments>
             </configuration>
           </execution>
           <execution>
@@ -83,4 +84,18 @@
       </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <id>github-ci</id>
+      <activation>
+        <property>
+          <name>env.GITHUB_ACTIONS</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <properties>
+        <npm.build.args>ci</npm.build.args>
+      </properties>
+    </profile>
+  </profiles>
 </project>
