set GraalVM dependencies to provided scope

--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -359,11 +359,13 @@
     <dependency>
       <groupId>org.graalvm.polyglot</groupId>
       <artifactId>polyglot</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.graalvm.js</groupId>
       <artifactId>js-scriptengine</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
