--- a/qa/wildfly-runtime/pom.xml
+++ b/qa/wildfly-runtime/pom.xml
@@ -253,8 +253,13 @@
                     <replace dir="${wildfly.runtime.location}/modules">
                       <include name="**/module.xml"/>
                       <replacefilter token="@project.version@" value="${project.version}"/>
-                      <replacefilter token="@version.postgresql@" value="${version.postgresql}"/>
                       <replacefilter token="@version.jython@" value="${version.jython}"/>
+                      <replacefilter token="@version.db2@" value="${version.db2}" />
+                      <replacefilter token="@version.mariadb@" value="${version.mariadb}" />
+                      <replacefilter token="@version.mysql@" value="${version.mysql}"/>
+                      <replacefilter token="@version.oracle@" value="${version.oracle}" />
+                      <replacefilter token="@version.postgresql@" value="${version.postgresql}"/>
+                      <replacefilter token="@version.sqlserver@" value="${version.sqlserver}" />
                     </replace>
                   </target>
                 </configuration>
@@ -377,6 +382,7 @@
                       <include name="**/module.xml"/>
                       <replacefilter token="@project.version@" value="${project.version}"/>
                       <replacefilter token="@version.postgresql@" value="${version.postgresql}"/>
+                      <replacefilter token="@version.mysql@" value="${version.mysql}"/>
                     </replace>
                   </target>
                 </configuration>
