chore(dependabot): Add prettier to eslint group
eslint depends on prettier and both must be upgraded at once

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -60,6 +60,7 @@ updates:
       eslint:
         patterns:
           - "eslint*"
+          - "prettier"
       webpack:
         patterns:
           - "webpack*"
@@ -152,6 +153,7 @@ updates:
       eslint:
         patterns:
           - "eslint*"
+          - "prettier"
       webpack:
         patterns:
           - "webpack*"
