--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -477,7 +477,7 @@ jobs:
           fail-on-cache-miss: true
 
       - name: Release with JReleaser
-        uses: jreleaser/release-action@v2
+        uses: jreleaser/release-action@90ac653bb9c79d11179e65d81499f3f34527dcd5 # v2.5.0
         env:
           JRELEASER_PROJECT_VERSION: ${{needs.build.outputs.project_version}}
           JRELEASER_GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
