--- a/.github/workflows/migration-test.yml
+++ b/.github/workflows/migration-test.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Set up Docker
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # v3.11.3
 
       - name: Run QA script
         run: |
