chore(ci): Ensure that shell scripts are not executed with 'npm install'
Adding option '--ignore-scripts'

Resolves Sonar security finding of type githubactions:S6505

--- a/.github/workflows/slack-link-check.yml
+++ b/.github/workflows/slack-link-check.yml
@@ -35,7 +35,7 @@ jobs:
           node-version: 20
 
       - name: Install Playwright core only
-        run: npm install playwright
+        run: npm install --ignore-scripts playwright
       - name: Extract Slack link from README
         id: extract
         run: |
