chore(ci): Remove 'L' option from curl command
Avoid to potentially follow redirects. The command is also working without the 'location' option.

Resolves Sonar security finding of type githubactions:S6506

--- a/.github/workflows/update-sbom.yml
+++ b/.github/workflows/update-sbom.yml
@@ -22,7 +22,7 @@ jobs:
           NONINTERACTIVE: '1'
         run: |
           echo "Installing Homebrew..."
-          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+          /bin/bash -c "$(curl -fsS https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
           # Persist brew environment for subsequent steps
           echo 'eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"' >> /home/runner/.bashrc
           echo >> /home/runner/.bashrc
