chore(ci): Add 'version.spring-boot' to be allowed for auto-merge

--- a/.github/auto-merge.config.yml
+++ b/.github/auto-merge.config.yml
@@ -52,6 +52,7 @@ auto-merge-rules:
       - 'io.netty:*'
       - 'io.swagger*'
       - 'net.javacrumbs.json-unit:*'
+      - 'version.spring-boot'
       - 'version.quarkus'
       - 'version.mockito'
       - 'version.groovy'
