feat(engine): add previewFeaturesEnabled configuration across runtimes Introduce previewFeaturesEnabled as a standard boolean engine configuration flag with default false and a single source of truth in ProcessEngineConfigurationImpl. Resolve the system property operaton.preview.features.enabled once during initialization and wire the result into the DMN engine configuration so DefaultDmnEngineConfiguration exposes the same flag.

--- a/distro/run/assembly/resources/default.yml
+++ b/distro/run/assembly/resources/default.yml
@@ -8,6 +8,8 @@ operaton.bpm:
     password: demo
   filter:
     create: All tasks
+  # Enables experimental preview features on the process engine level (default: false)
+  # preview-features-enabled: true
   run:
 # https://docs.operaton.org/manual/latest/user-guide/operaton-bpm-run/#cross-origin-resource-sharing
     cors:
