Added missing dependency

--- a/engine-cdi/pom.xml
+++ b/engine-cdi/pom.xml
@@ -87,6 +87,11 @@
 
     <!-- Test dependencies -->
     <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.jboss.weld.module</groupId>
       <artifactId>weld-web</artifactId>
       <scope>test</scope>
